--- a/assets/scss/themes/_variable.scss
+++ b/assets/scss/themes/_variable.scss
@@ -42,6 +42,7 @@ $bg-c4-light: #DEDDDC;
 $bg-c5-light:#D9D9D9;
 $bg-c1-dark:#000;
 $bg-c1-brown:  #E1B067;
+$bg-c2-brown:  #F8B653;
 $bg-c1-red:red;
 $bg-c1-green: #1ED90E;
 $bg-c1-linear:linear-gradient(180deg, #6181F3 0%, #7C97F5 99.48%);
