--- a/css/index.css
+++ b/css/index.css
@@ -15,54 +15,188 @@ html {
   margin: 0 auto;
 }
 
-.productRelate {
+body {
+  position: relative;
+}
+
+header .header-top {
+  background-color: #000;
+}
+header .header-top .container {
+  color: #F7F7F7;
+  padding: 5px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header .header-top .container .logo img {
+  width: 100%;
+}
+header .header-top .container .contact {
+  display: flex;
+  align-items: center;
+}
+header .header-top .container .contact .cart {
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+}
+header .header-top .container .contact .cart .btnCart {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+header .header-top .container .contact .cart .btnCart img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+header .header-top .container .contact .cart .btnCart img:hover {
+  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75);
+}
+header .header-top .container .contact .cart span {
+  font-size: 30px;
+  font-weight: 300;
+}
+header .header-top .container .login {
+  font-size: 16px;
+  font-weight: 300;
+  text-decoration: none;
+  color: #F5F5F5;
+  margin-right: 20px;
+}
+header .header-top .container .register {
+  font-size: 16px;
+  font-weight: 300;
+  text-decoration: none;
+  color: #F5F5F5;
+  margin-right: 20px;
+}
+header .header-bottom .container {
+  padding: 0 30px;
+}
+header .header-bottom .container .navbar {
+  background-color: #fff !important;
+}
+header .header-bottom .container .navbar .nav-item .nav-link {
+  font-size: 20px;
+  font-weight: 400;
+  position: relative;
+}
+
+.carousel .container {
+  background-image: url(../assets/images/bgImage.png);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: 100%;
+}
+.carousel .container #carouselExampleIndicators .carousel-indicators {
+  bottom: 60px;
+}
+.carousel .container #carouselExampleIndicators .carousel-indicators li {
+  background-color: black;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+}
+.carousel .container #carouselExampleIndicators .carousel-inner .carousel-item .carousel-item-right h3 {
+  font-size: 40px;
+  font-weight: 300;
+  margin: 0;
+}
+.carousel .container #carouselExampleIndicators .carousel-inner .carousel-item .carousel-item-right .desc {
+  font-size: 20px;
+  font-weight: 300;
+  width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.carousel .container #carouselExampleIndicators .carousel-inner .carousel-item .carousel-item-right .buyNow {
+  font-size: 20px;
+  font-weight: 300;
+  background-color: #F8B653;
+  color: #F5F5F5;
+  padding: 13px 35px;
+  border: none;
+  outline: none;
+}
+.carousel .container #carouselExampleIndicators .carousel-inner .carousel-item .carousel-item-right .buyNow:hover {
+  box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.58);
+}
+.carousel .container #carouselExampleIndicators .carousel-control-prev {
+  width: 10%;
+  color: rgb(107, 105, 105);
+}
+.carousel .container #carouselExampleIndicators .carousel-control-prev span i {
+  font-size: 150px;
+}
+.carousel .container #carouselExampleIndicators .carousel-control-prev span i:hover {
+  color: #000;
+}
+.carousel .container #carouselExampleIndicators .carousel-control-next {
+  width: 10%;
+  color: rgb(107, 105, 105);
+}
+.carousel .container #carouselExampleIndicators .carousel-control-next span i {
+  font-size: 150px;
+}
+.carousel .container #carouselExampleIndicators .carousel-control-next span i:hover {
+  color: #000;
+}
+
+.product {
   margin-top: 55px;
 }
-.productRelate .container {
+.product .container {
   padding-left: 100px;
 }
-.productRelate .container h2 {
+.product .container h2 {
   font-size: 40px;
   font-weight: 400;
 }
-.productRelate .container .prodItem {
+.product .container .prodItem {
   margin-top: 89px;
 }
-.productRelate .container .prodItem .prodCard {
+.product .container .prodItem .prodCard {
   margin-bottom: 47px;
 }
-.productRelate .container .prodItem .prodCard .card {
+.product .container .prodItem .prodCard .card {
   border: none;
-  width: 350px;
-  height: 400px;
+  width: 334px;
+  height: 369px;
   background-color: #F8F8F8;
 }
-.productRelate .container .prodItem .prodCard .card img {
+.product .container .prodItem .prodCard .card img {
   width: 220px;
-  height: 170px;
+  height: 156px;
   margin: auto;
 }
-.productRelate .container .prodItem .prodCard .card .name {
+.product .container .prodItem .prodCard .card .name {
   font-size: 24px;
   font-weight: 300;
   line-height: 29px;
   padding-left: 23px;
 }
-.productRelate .container .prodItem .prodCard .card .shortDes {
+.product .container .prodItem .prodCard .card .shortDes {
   font-size: 20px;
   font-weight: 300;
   line-height: 24px;
   padding-left: 23px;
   color: #CBC9C9;
 }
-.productRelate .container .prodItem .prodCard .card .cardFooter {
+.product .container .prodItem .prodCard .card .cardFooter {
   display: flex;
   align-items: center;
 }
-.productRelate .container .prodItem .prodCard .card .cardFooter a {
+.product .container .prodItem .prodCard .card .cardFooter a {
   width: 50%;
 }
-.productRelate .container .prodItem .prodCard .card .cardFooter a .buyProd {
+.product .container .prodItem .prodCard .card .cardFooter a .buyProd {
   width: 100%;
   border: none;
   height: 64px;
@@ -70,10 +204,10 @@ html {
   font-size: 24px;
   font-weight: 200;
 }
-.productRelate .container .prodItem .prodCard .card .cardFooter a .buyProd:hover {
+.product .container .prodItem .prodCard .card .cardFooter a .buyProd:hover {
   box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.58);
 }
-.productRelate .container .prodItem .prodCard .card .cardFooter .priceItem {
+.product .container .prodItem .prodCard .card .cardFooter .priceItem {
   width: 50%;
   height: 64px;
   margin: 0;
@@ -83,4 +217,99 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+footer {
+  margin-top: 106px;
+}
+footer .footer-top {
+  padding: 20px 0 10px 0;
+  background-color: #F8F8F8;
+}
+footer .footer-top .container {
+  padding: 0 15px;
+}
+footer .footer-top .container h3 {
+  font-size: 30px;
+  font-weight: 700;
+}
+footer .footer-top .container ul {
+  text-decoration: none;
+  list-style: none;
+}
+footer .footer-top .container ul li {
+  font-size: 16px;
+  font-weight: 300;
+}
+footer .footer-top .container p {
+  font-size: 16px;
+  font-weight: 300;
+}
+footer .footer-top .container a {
+  color: #FC0303;
+  font-size: 16px;
+  font-weight: 200;
+}
+footer .footer-top .container .borderLeft {
+  border-left: 1px solid #cccccc;
+}
+footer .footer-bottom {
+  background-color: #DEDDDC;
+  padding: 10px 0;
+}
+footer .footer-bottom .container {
+  padding: 0 15px;
+}
+footer .footer-bottom .container h3 {
+  font-size: 30px;
+  font-weight: 700;
+}
+footer .footer-bottom .container p {
+  font-size: 16px;
+  font-weight: 300;
+}
+footer .footer-bottom .container a {
+  color: #FC0303;
+  font-size: 16px;
+  font-weight: 200;
+}
+footer .footer-bottom .container .borderLeft {
+  border-left: 1px solid #cccccc;
+}
+
+.ontop {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  background-color: red;
+  cursor: pointer;
+  border-radius: 10px;
+}
+.ontop:hover {
+  background: linear-gradient(270deg, rgba(62, 32, 248, 0.9) 5.14%, #D017EE 89.71%);
+  box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.58);
+  color: white;
+}
+.ontop:hover .top {
+  border: none;
+  outline: none;
+  color: white;
+}
+.ontop .top {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: none;
+  outline: none;
+  color: black;
+}
+.ontop .top i {
+  font-size: 20px;
+  font-weight: 700;
+}
+.ontop .top:hover {
+  color: white;
 }
