--- a/css/index.css
+++ b/css/index.css
@@ -313,3 +313,43 @@ footer .footer-bottom .container .borderLeft {
 .ontop .top:hover {
   color: white;
 }
+
+#tableProduct div img {
+  width: 100%;
+  height: 100%;
+}
+#tableProduct div .name {
+  font-size: 18px;
+  font-weight: 700;
+}
+#tableProduct div .countItem {
+  font-size: 16px;
+  font-weight: 400;
+}
+#tableProduct div .price {
+  font-size: 16px;
+  font-weight: 400;
+}
+#tableProduct div .totalPrice {
+  font-size: 16px;
+  font-weight: 400;
+}
+#tableProduct div .row {
+  text-align: center;
+}
+#tableProduct div .row button {
+  border: none;
+  outline: none;
+}
+#tableProduct div .row span {
+  max-width: 24%;
+}
+#tableProduct .total {
+  font-size: 18px;
+  font-weight: 700;
+}
+#tableProduct .total span {
+  font-size: 18px;
+  font-weight: 400;
+  color: #FC0303;
+}
