--- a/app/views/detail.html
+++ b/app/views/detail.html
@@ -35,7 +35,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-success" data-dismiss="modal">Buy Now</button>
+                    <button type="button" class="btn btn-success" id="buyNow" data-dismiss="modal">Buy Now</button>
                     <button type="button" class="btn btn-danger" id="deleteAll" data-dismiss="modal"> Delate
                         All</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
