--- a/app/views/register.html
+++ b/app/views/register.html
@@ -72,19 +72,19 @@
                     <div class="row">
                         <div class="col-6 register-left ">
                             <div class="form-group">
-                                <input type="text" class="" id="email" placeholder=" "/>
+                                <input type="text" class="" id="email" placeholder=" " name="clearCache" autocomplete="off" />
                                 <label for="email">Email</label>
                                 <div class="email">(*)</div>
                             </div>
 
                             <div class="form-group">
-                                <input type="text" class="" id="password" placeholder=" "/>
+                                <input type="password" class="" id="password" placeholder=" " name="clearCache" autocomplete="off"/>
                                 <label for="password">Password</label>
                                 <div class="password">(*)</div>
                             </div>
 
                             <div class="form-group">
-                                <input type="text" class="" id="passwordConfirm" placeholder=" " />
+                                <input type="password" class="" id="passwordConfirm" placeholder=" " name="clearCache" autocomplete="off" />
                                 <label for="passwordConfirm">Password confirm</label>
                                 <div class="passwordConfirm">(*)</div>
                             </div>
@@ -92,13 +92,13 @@
                         </div>
                         <div class="col-6 register-right">
                             <div class="form-group ">
-                                <input type="text" class="" id="name" placeholder=" " />
+                                <input type="text" class="" id="name" placeholder=" " name="clearCache" autocomplete="off" />
                                 <label for="name">Name</label>
                                 <div class="name">(*)</div>
                             </div>
 
                             <div class="form-group ">
-                                <input type="text" class="" id="phone" placeholder=" "/>
+                                <input type="text" class="" id="phone" placeholder=" " name="clearCache" autocomplete="off"/>
                                 <label for="phone">Phone</label>
                                 <div class="phone">(*)</div>
                             </div>
